dropshot/tests/fail/bad_endpoint1.stderr
error: Endpoint requires arguments
Try using the following endpoint format:
    async fn my_endpoint(
        rqctx: std::sync::Arc<dropshot::RequestContext<MyContext>>,
        [query_params: Query<Q>,]
        [path_params: Path<P>,]
        [body_param: TypedBody<J>,]
        [body_param: UntypedBody<J>,]
    ) -> Result<HttpResponse*, HttpError>
  --> $DIR/bad_endpoint1.rs:20:1
   |
20 | async fn bad_endpoint() -> Result<HttpResponseOk<()>, HttpError> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
